--- a/app/includes/_header.html
+++ b/app/includes/_header.html
@@ -14,10 +14,7 @@
           </ul>
         </nav>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-3 header__btns d-flex align-items-center justify-content-end">
-        <input class="header-btn__login" type="submit" value="Login"/>
-        <input class="header-btn__sign" type="submit" value="Sign Up"/>
-      </div>
+      <div class="col-xs-12 col-sm-12 col-md-3 header__btns d-flex align-items-center justify-content-end"><a class="header-btn__login d-flex align-items-center justify-content-center" href="#"> Login</a><a class="header-btn__sign d-flex btn_font-color_white align-items-center justify-content-center" href="#"> Sign Up</a></div>
     </div>
   </div>
 </header>
