--- a/app/pug/includes/_header.pug
+++ b/app/pug/includes/_header.pug
@@ -19,8 +19,12 @@ header.header.d-flex.align-items-center
                             a(href="#Guide").header-navbar-ul__li_a-text-style Guide
 
             .col-xs-12.col-sm-12.col-md-3.header__btns.d-flex.align-items-center.justify-content-end
-                input(type="submit", value="Login").header-btn__login
-                input(type="submit", value="Sign Up").header-btn__sign
+                a(href="#").header-btn__login.d-flex.align-items-center.justify-content-center  Login
+                a(href="#").header-btn__sign.d-flex.btn_font-color_white.align-items-center.justify-content-center  Sign Up
+                
+                
+                //-input(type="submit", value="Login").header-btn__login
+                //-input(type="submit", value="Sign Up").header-btn__sign
 
 
         
