--- a/app/includes/_main.html
+++ b/app/includes/_main.html
@@ -1,6 +1,6 @@
 
 <main class="main">
-  <div class="first-box">
+  <div class="first-box box-bg_blue">
     <div class="container">
       <div class="row">
         <div class="col-md"></div>
@@ -21,10 +21,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-12 buttons">
-              <input class="button_monetize" type="submit" value="MONETIZE"/>
-              <input class="button_ADVERTIZE" type="submit" value="ADVERTIZE"/>
-            </div>
+            <div class="col-12 buttons"><a class="button_monetize btn_font-color_white d-flex align-items-center justify-content-center" href="#"> MONETIZE</a><a class="button_ADVERTIZE btn_font-color_white d-flex align-items-center justify-content-center" href="#"> ADVERTIZE</a></div>
           </div>
         </div>
         <div class="col-md"></div>
@@ -121,13 +118,187 @@
       <div class="row">
         <div class="col-md-3"></div>
         <div class="col-12 col-md-6">
-          <h3 class="third-box__title">Create a free account in ICTW ADS </h3><span class="third-box__span">and run the campaign in a few minutes</span>
+          <h3 class="third-box__title d-flex align-items-center justify-content-center">Create a free account in ICTW ADS </h3><span class="third-box__span d-flex align-items-center justify-content-center">and run the campaign in a few minutes</span>
         </div>
         <div class="col-md-3"></div>
       </div>
       <div class="row">
-        <div class="col-12 d-flex align-items-center justify-content-center">
-          <input class="third-box__button" type="submit" value="CREATE A CAMPAIGN"/>
+        <div class="col-12 d-flex align-items-center justify-content-center"><a class="third-box__button btn_font-color_blue d-flex align-items-center justify-content-center" href="#"> CREATE A CAMPAIGN</a></div>
+      </div>
+    </div>
+  </div>
+  <div class="fourth-box">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="fourth-box__title d-flex align-items-center justify-content-center">They already made sure </h2><span class="fourth-box__span d-flex align-items-center justify-content-center">of our effectiveness        </span>
+        </div>
+      </div>
+      <div class="row d-flex flex-wrap align-items-center justify-content-center">
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="fourth-box__box-label d-flex align-items-center justify-content-center"><img src="img/logo-viking-farms.png" alt=""/></div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="fourth-box__box-label d-flex align-items-center justify-content-center"><img src="img/logo-vms.png" alt=""/></div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="fourth-box__box-label d-flex align-items-center justify-content-center"> <img src="img/logo-bascom.png" alt=""/></div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="fourth-box__box-label d-flex align-items-center justify-content-center"><img src="img/logo-vermont-village.png" alt=""/></div>
+        </div>
+      </div>
+      <div class="row d-flex flex-wrap align-items-center justify-content-center">
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="fourth-box__box-label d-flex align-items-center justify-content-center"><img src="img/logo-whisper-hill.png" alt=""/></div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="fourth-box__box-label d-flex align-items-center justify-content-center"><img src="img/logo-shm.png" alt=""/></div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="fourth-box__box-label d-flex align-items-center justify-content-center"> <img src="img/logo-tretap.png" alt=""/></div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="fourth-box__box-label d-flex align-items-center justify-content-center"><img src="img/logo-mse.png" alt=""/></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="fifth-box box-bg_blue">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="fifth-box__title d-flex align-items-center justify-content-center">Spot Your Advertisement Format</h2><span class="fifth-box__span d-flex align-items-center justify-content-center">Choose and combine the best Advertising Solutions for reaching a Major Impact</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 fifth-box__box-for-tabs">
+          <ul class="nav nav-tabs nav-fill nav-overflow" id="myTab">
+            <li class="nav-item col-12 col-sm-6 col-md-3 no-padding"><a class="nav-link active fifth-box__batton-tabs fifth-box__batton-tabs_right-line d-flex align-items-center justify-content-center" data-toggle="tab" href="#teasers">Teasers</a></li>
+            <li class="nav-item col-12 col-sm-6 col-md-3 no-padding"><a class="nav-link fifth-box__batton-tabs fifth-box__batton-tabs_right-line d-flex align-items-center justify-content-center" data-toggle="tab" href="#context">context</a></li>
+            <li class="nav-item col-12 col-sm-6 col-md-3 no-padding"><a class="nav-link fifth-box__batton-tabs fifth-box__batton-tabs_right-line d-flex align-items-center justify-content-center" data-toggle="tab" href="#banners">banners</a></li>
+            <li class="nav-item col-12 col-sm-6 col-md-3 no-padding"><a class="nav-link fifth-box__batton-tabs d-flex align-items-center justify-content-center" data-toggle="tab" href="#mobile">mobile</a></li>
+          </ul>
+          <div class="tab-content">
+            <div class="tab-pane fade in active" id="teasers">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-12 col-md-8 col-lg-6"><img class="teasers-pisition img_max-width" src="/img/mac.png" alt=""/></div>
+                  <div class="col-12 col-md-4 col-lg-6">
+                    <h3 class="tabs__title">One of the most interest-provoking advertising method.</h3><span class="tabs__span">An appealing picture with an attractive headline create a true highlight of the page, which is difficult to ignore. Wide customization options help to configure and maintain this popular ad format in accordance with advertiser needs and user expectations.</span><br/><a class="tabs__button btn_font-color_white d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane" id="context">
+              <div class="row">
+                <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="img_max-width" src="/img/context.png" alt=""/></div>
+                <div class="col-12 col-md-4 col-lg-6">
+                  <h3 class="tabs__title">Textual ads - easy and fruitful format for commercial goals</h3><span class="tabs__span">Texts are suitable advertising tool for any-purpose promotion campaign. Thanks to adaptive design and wide customization options, this kind of ads naturally fits into main content of the page and softly induce visitors to follow them.</span><br/><a class="tabs__button btn_font-color_white d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane" id="banners">
+              <div class="row">
+                <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="img_max-width" src="/img/banners.png" alt=""/></div>
+                <div class="col-12 col-md-4 col-lg-6">
+                  <h3 class="tabs__title">An ultimate eye-catching advertising format to draw viewers’ attention</h3><span class="tabs__span">Banners are an effective image-based promotional tool to notify users of the product. Accompanied by useful customization features, high-quality placement, and animating possibility, these influential ads leave the little possibility to remain unnoticed.</span><br/><a class="tabs__button btn_font-color_white d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane" id="mobile">
+              <div class="row">
+                <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="img_max-width" src="/img/mobile.png" alt=""/></div>
+                <div class="col-12 col-md-4 col-lg-6">
+                  <h3 class="tabs__title">The up-to-day shortest way to reach your target audience</h3><span class="tabs__span">Due to the growth of mobile Internet users, mobile ad types became one of the most productive means for goods promotion. This flexible and easily managed ad format helps to access a larger number of viewers and increase the engagement rate.</span><br/><a class="tabs__button btn_font-color_white d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="sixth-box">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-12">
+                <h3 class="sixth-box__title">The first-rate means for reaching the target market</h3>
+              </div>
+            </div>
+            <div class="row padding_bottom">
+              <div class="col-2"><img src="img/icon-left-001.svg" alt=""/></div>
+              <div class="col-10">
+                <h4 class="sixth-box__h4">5 minutes to setup a campaign </h4><span class="sixth-box__span">Quick and easy ads customization</span>
+              </div>
+            </div>
+            <div class="row padding_bottom">
+              <div class="col-2"><img src="img/icon-left-002.svg" alt=""/></div>
+              <div class="col-10">
+                <h4 class="sixth-box__h4">Manual sites selection  </h4><span class="sixth-box__span">Choosing solely relevant ad platforms</span>
+              </div>
+            </div>
+            <div class="row padding_bottom">
+              <div class="col-2"><img src="img/icon-left-003.svg" alt=""/></div>
+              <div class="col-10">
+                <h4 class="sixth-box__h4">Real-time statistic  </h4><span class="sixth-box__span">Only up-to-date ad campaign data</span>
+              </div>
+            </div>
+            <div class="row padding_bottom">
+              <div class="col-2"><img src="img/icon-left-004.svg" alt=""/></div>
+              <div class="col-10">
+                <h4 class="sixth-box__h4">100% real users </h4><span class="sixth-box__span">Protection from any bot or suspicious activity</span>
+              </div>
+            </div>
+            <div class="row padding_bottom">
+              <div class="col-2"><img src="img/icon-left-005.svg" alt=""/></div>
+              <div class="col-10">
+                <h4 class="sixth-box__h4">Helpful support team </h4><span class="sixth-box__span">Timely assistance from qualified consultants</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-12">
+                <h3 class="sixth-box__title">For publishers who want to monetize the site</h3>
+              </div>
+            </div>
+            <div class="row padding_bottom">
+              <div class="col-2"><img src="img/icon-right-001.svg" alt=""/></div>
+              <div class="col-10">
+                <h4 class="sixth-box__h4">Easy to operate </h4><span class="sixth-box__span">Just paste the ad code to the site</span>
+              </div>
+            </div>
+            <div class="row padding_bottom">
+              <div class="col-2"><img src="img/icon-right-002.svg" alt=""/></div>
+              <div class="col-10">
+                <h4 class="sixth-box__h4">Clear statistics  </h4><span class="sixth-box__span">Detailed views and clicks reports</span>
+              </div>
+            </div>
+            <div class="row padding_bottom">
+              <div class="col-2"><img src="img/icon-right-003.svg" alt=""/></div>
+              <div class="col-10">
+                <h4 class="sixth-box__h4">Full safety  </h4><span class="sixth-box__span">Checked and approved advert messages </span>
+              </div>
+            </div>
+            <div class="row padding_bottom">
+              <div class="col-2"><img src="img/icon-right-004.svg" alt=""/></div>
+              <div class="col-10">
+                <h4 class="sixth-box__h4">Quick payments </h4><span class="sixth-box__span">Fast and safe generation of income</span>
+              </div>
+            </div>
+            <div class="row padding_bottom">
+              <div class="col-2"><img src="img/icon-right-005.svg" alt=""/></div>
+              <div class="col-10">
+                <h4 class="sixth-box__h4">Various ad settings </h4><span class="sixth-box__span">Easy ads adaption to the site design</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
