--- a/app/scss/import/_header.scss
+++ b/app/scss/import/_header.scss
@@ -41,17 +41,19 @@
 }
 
 .header-btn__login{
+    @extend %nullLink;
     width: 139px;
     height: 40px;
     font-size: 14px;
     font-weight: bold;
     font-family: $Raleway;
     color: #7E7E7E;
-    text-decoration: underline;
+    text-decoration: underline !important;
     background: rgba(255, 255, 255, 0);
 }
 
 .header-btn__sign{
+    @extend %nullLink;
     width: 139px;
     height: 40px;
     background: transparent linear-gradient(270deg, #00B5FF 0%, #0073B9 100%) 0% 0% no-repeat padding-box;
